all done 1st page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="fluid">
         <div class="title-section">
             <div class="title">
                 <h2>A word on our timber</h2>
@@ -42,7 +42,8 @@
                     <div class="title">
                         <h3>QUALITY ASSURANCE</h3>
                     </div>
-                    <p>We carefully select the best quality, sustainable timbers for both our website and your bespoke
+                    <p class="para">We carefully select the best quality, sustainable timbers for both our website and
+                        your bespoke
                         items.</p>
                 </div>
             </div>
@@ -62,10 +63,11 @@
         <!-- content ends here -->
         <div class="middle-part">
             <div class="main_pictures">
-        </div>
-        <div class="content">
-            <p class="para">Any waste chippings and sawdust makes its way to a local farm, in sight of our workshop, to be used for bedding and absorbent for the farm animals.</p>
-        </div>
+            </div>
+            <div class="content">
+                <p class="para">Any waste chippings and sawdust makes its way to a local farm, in sight of our workshop,
+                    to be used for bedding and absorbent for the farm animals.</p>
+            </div>
         </div>
         <!-- recycle part starts here -->
         <div class="recycling">
@@ -74,8 +76,8 @@
                     <div class="title">
                         <h3>RECYCLING</h3>
                     </div>
-                    <p>We carefully select the best quality, sustainable timbers for both our website and your bespoke
-                        items.</p>
+                    <p class="para">All of our packaging is recyclable; even our air pillows and bubble wrap can be recycled at your
+                        local supermarket.</p>
                 </div>
             </div>
         </div>
@@ -90,10 +92,10 @@
             <div class="para">Subscribe to our newsletter to receive the latest in products and special offers.
             </div>
         </div>
- <div class="form-group">
-    <input type="email" name="" id="email-form" placeholder="email@example.com">
-    <button class="btn" type="submit">Subscribe &#x27A4;</button>
- </div>
+        <div class="form-group">
+            <input type="email" name="" id="email-form" placeholder="email@example.com">
+            <button class="btn" type="submit">Subscribe &#x27A4;</button>
+        </div>
     </section>
 </body>
 
